codex-rs/xcodex/tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__approval_modal_exec_multiline_prefix_no_execpolicy.snap
---
source: xcodex/tui2/src/chatwidget/tests.rs
expression: contents
---


  Would you like to run the following command?

  $ python - <<'PY'
  print('hello')
  PY

› 1. Yes, proceed (y)
  2. No, and tell xcodex what to do differently (esc)

  Press enter to confirm, esc to cancel, or ctrl + y to copy command
