codex-rs/xcodex/tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__approval_modal_patch.snap
---
source: xcodex/tui2/src/chatwidget/tests.rs
expression: terminal.backend().vt100().screen().contents()
---
                                                                                
                                                                                
  Would you like to make the following edits?                                   
                                                                                
  Reason: The model wants to apply changes                                      
                                                                                
  README.md (+2 -0)                                                             
                                                                                
                                        │ 1 +hello                              
                                        │ 2 +world                              
                                                                                
› 1. Yes, proceed (y)                                                           
  2. Yes, and don't ask again for these files (a)                               
  3. Manual apply in editor (m)                                                 
  4. No, and tell xCodex what to do differently (esc)                           
                                                                                
  Press enter to confirm or esc to cancel                                       
