codex-rs/xcodex/tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__chatwidget_exec_and_status_layout_vt100_snapshot.snap
---
source: xcodex/tui2/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---



























• I’m going to search the repo for where “Change Approved” is rendered to update
  that view.

• Explored
  └ Search Change Approved
    Read diff_render.rs

• Charging (0s • esc to interrupt)


› Summarize recent commits

  100% context left · ctrl + k copy prompt · tab to queue message
