codex-rs/xcodex/tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__chatwidget_tall.snap
---
source: xcodex/tui2/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---

• Charging (0s • esc to interrupt)

  ↳ Hello, world! 0
  ↳ Hello, world! 1
  ↳ Hello, world! 2
  ↳ Hello, world! 3
  ↳ Hello, world! 4
  ↳ Hello, world! 5
  ↳ Hello, world! 6
  ↳ Hello, world! 7
  ↳ Hello, world! 8
  ↳ Hello, world! 9
  ↳ Hello, world! 10
  ↳ Hello, world! 11
  ↳ Hello, world! 12
  ↳ Hello, world! 13
  ↳ Hello, world! 14
  ↳ Hello, world! 15
  ↳ Hello, world! 16

› Ask xcodex to do anything

  100% context left · ? for shortcuts
