codex-rs/xcodex/tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__mcp_empty_output.snap
---
source: tui2/src/chatwidget/tests.rs
expression: rendered_text
---
/mcp

🔌  MCP Tools

  • No MCP servers configured.
    See the ]8;;https://github.com/openai/codex/blob/main/docs/config.md#mcp_serversMCP docs]8;; to configure them.
